added citation links

--- a/plugins/flow_app/Templates.html
+++ b/plugins/flow_app/Templates.html
@@ -16,13 +16,13 @@
 
 
         <div style="padding:10px 10px 10px 10px">
-            <p>Welcome to HydroFlows! This tool is designed to provide you with common flow statistics that relay information on current and future water flow trends in Mississippi.  You have 3 options for getting started:</p>
+            <p>Welcome to HydroFlows! This tool is designed to provide you with common flow statistics that relay information on current and future water flow trends in Mississippi&nbsp;&nbsp;(<a href="plugins/flow_app/HydroFlows_Methods_050216.pdf" target="_blank">View Methods</a>).  You have 3 options for getting started:</p>
             <p>
                 <b>Option 1:</b> Search for a Location (e.g. <i>town,state</i> )<br />
                 <input type="text" id="txtLocation" style="width:250px" />&nbsp;<button id="btnFindLocation">Find Location</button>
             </p>
             <p>
-                <b>Option 2:</b> Click on any HUC8 watershed in the map to view more detailed HUC12 watershed data.
+                <b>Option 2:</b> Click on any <a href="plugins/flow_app/hydrologic_units.pdf" target="_blank">HUC8</a> watershed in the map to view more detailed <a href="plugins/flow_app/hydrologic_units.pdf" target="_blank">HUC12</a> watershed data.
             </p>
             <p>
                 <b>Option 3:</b> View all available HUC12s and make your selections from there.<br />
@@ -38,13 +38,11 @@
 				2. Future conditions were calculated for three scenarios – climate change, projected water use (by sector), and the combination of climate change and projected water use. (MAYBE A LINK TO THE EMISSIONS SCENARIO)?<br />
 			</p>
 			<p>
-				3. The app returns the Index of Hydrologic Alteration (IHA) flow metrics (Richter et al. 1996). These commonly accepted metrics provide characteristics of flow and flow alteration that influence wetlands, rivers, and other aquatic systems and the organisms, like fish, that live there. (PROVIDE ONE OR MORE LINKS TO PAPERS)<br />
+				3. The app returns the Index of Hydrologic Alteration (IHA) flow metrics (<a href="plugins/flow_app/Richter_et_al_1996_ Method_for_Assessing_Hydrologic_Alteration.pdf" target="_blank">Richter et al. 1996</a>). These commonly accepted metrics provide characteristics of flow and flow alteration that influence wetlands, rivers, and other aquatic systems and the organisms, like fish, that live there.<br />
 			</p>
 			<p>
 				4. This app uses both the US Geological Survey’s Hydrologic Unit Classification System (HUC) and the National Hydrography Dataset. IHA metrics are shown for HUC-12 sub-watersheds (10,000-40,000 acres (15.6 to 62.5 mi2) and NHDPlus Catchments (average about 1-mi2; km2).<br />
 			</p>
-			<p>
-				5. Additional references and explanations for terms are provided at select points inside the app.<br />
         </div>
        
         </div>
