added methods doc

--- a/plugins/flow_app/Templates.html
+++ b/plugins/flow_app/Templates.html
@@ -29,6 +29,9 @@
                 <button id="btnShowAll">Show All HUC12s</button>
             </p>
 			<p>
+                For more information on the model, view our <a href="/mississippi/plugins/flow_app/HydroFlows_Methods_050216.pdf" target='_blank'><b>methods</b></a> document.
+            </p>
+			<p>
 				<b>Quick Facts:<br />
 			</p>
 			<p>
