--- a/partners.html
+++ b/partners.html
@@ -39,19 +39,19 @@
         <h3>Our Partners:</h3>
         <ul>
             <li>
-                <a href="http://www.nature.org"><img src="http://placehold.it/250x150" /></a>
+                <a href="https://www.nature.org"><img src="https://placehold.it/250x150" /></a>
                 <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum in nisl quis dapibus.</span>
             </li>
             <li>
-                <img src="http://placehold.it/250x150" />
+                <img src="https://placehold.it/250x150" />
                 <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum in nisl quis dapibus.</span>
             </li>
             <li>  
-                <img src="http://placehold.it/250x150" />
+                <img src="https://placehold.it/250x150" />
                 <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum in nisl quis dapibus.</span>
             </li>
             <li> 
-                <img src="http://placehold.it/250x150" />
+                <img src="https://placehold.it/250x150" />
                 <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum in nisl quis dapibus.</span>
             </li>
         </ul>
